--- a/style.css
+++ b/style.css
@@ -1,2 +1,3 @@
+
 h1{padding-bottom:10px;color: goldenrod; border-bottom: 2px solid #999;}
-img{display: block;width:100%;}
+img{margin:0 auto;display: block;width:100%;}
