--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-
+body{margin:0 auto;padding:0 auto;}
 h1{padding-bottom:10px;color: goldenrod; border-bottom: 2px solid #999;}
 img{margin:0 auto;display: block;width:100%;}
