--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body{margin:0 auto;padding:0 auto;}
-h1{padding-bottom:10px;color: goldenrod; border-bottom: 2px solid #999;}
+body{max-width:1024px;margin:0;padding:0;}
+h1{padding-bottom:10px;color: goldenrod; border-bottom: 2px solid #eee;}
 img{margin:0 auto;display: block;width:100%;}
