--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body,html{margin:0;padding:0}
-h1{padding-bottom:10px;color: goldenrod; border-bottom: 2px solid #999;}
-img{margin:0 auto;display: block;width:50%;max-width:960px;}
+h1{padding-bottom:10px;color: skyblue; border-bottom: 2px solid #999;}
+img{margin:0;display: block;width:50%;max-width:960px;}
